# embedding_visualizer

./: .gitignore  README.md  pyproject.toml
.github/workflows/: workflow.yaml
examples/: repo_files.ipynb
src/embedding_visualizer/: __init__.py  _cache.py  _embed.py  _plot.py  _projections.py  _visualize.py
