[project]
name = "embedding-visualizer"
version = "0.1.1"
description = "Visualize text embeddings with interactive plots"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "openai>=1.0.0",
    "tiktoken>=0.5.0",
    "numpy>=1.24.0",
    "scikit-learn>=1.3.0",
    "plotly>=5.18.0",
    "nbformat>=4.2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/embedding_visualizer"]
